SFUSA/force-app/main/default/objects/Currency_Conversion_Rate__mdt/fields/Conversion_Rate__c.field-meta.xml
<CustomField>
        <fullName>Conversion_Rate__c</fullName>
        <description>Currency conversion rate for selected currency to USD</description>
        <label>Conversion Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </CustomField>