SFUSA/force-app/main/default/objects/Currency_Conversion_Rate__mdt/fields/Effective_End_Date__c.field-meta.xml
<CustomField>
        <fullName>Effective_End_Date__c</fullName>
        <description>The end date of the period that the exchange rate is effective for.</description>
        <label>Effective End Date</label>
        <required>true</required>
        <type>Date</type>
    </CustomField>